--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,5 @@
-name: CI
+name: Terraform Deploy (Azure OIDC)
 
-# Controls when the workflow will run
 on:
   push:
     branches: [ "main" ]
@@ -8,44 +7,44 @@ on:
 permissions:
   contents: read
   id-token: write
-  
+
 jobs:
   terraform:
-    name: Apply main.tf
     runs-on: ubuntu-latest
     environment: production
 
-    # Optional: Setze standard-Env für "saubere" CLI-Ausgaben
+    # Map your environment vars to the ARM_* vars Terraform's azurerm provider expects
     env:
-      TF_IN_AUTOMATION: "true"
+      ARM_USE_OIDC: "true"
+      ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Required by your spec; also establishes federated auth for Azure CLI
+      - name: Azure Login (OIDC)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-        with:
-          # Optional: feste Version setzen (z.B. 1.9.5). Wenn weggelassen, wird die Standardversion verwendet.
-          # terraform_version: 1.9.5
-          cli_config_credentials_token: "" # keine Terraform Cloud nötig
-
-      - name: Terraform Version
-        run: terraform version
+        # with:
+        #   terraform_version: 1.9.5  # optional pin
 
       - name: Terraform Init
-        working-directory: .
         run: terraform init -input=false
 
       - name: Terraform Validate
-        working-directory: .
         run: terraform validate
 
       - name: Terraform Plan
-        working-directory: .
         run: terraform plan -input=false -out=tfplan
 
       - name: Terraform Apply
-        working-directory: .
-        # auto-approve für non-interaktives Apply im CI
         run: terraform apply -input=false -auto-approve tfplan
