--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -input=false -out=tfplan
 
-      - name: Terraform Apply
-        run: terraform apply -input=false -auto-approve tfplan
+      #- name: Terraform Apply
+      #  run: terraform apply -input=false -auto-approve tfplan
